--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -1,5 +1,5 @@
 <footer id="footer">
 <div class="copyright">
-&copy; Aura Walls. Design: <a href="https://templated.co/">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>.
+&copy; Kessie Kwang. Design: <a href="https://templated.co/">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>.
 </div>
 </footer>
